# snake-cpp

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
